@@ -10,11 +10,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
@@ -26,7 +22,6 @@ import org.jboss.jandex.Index;
 import io.quarkus.bootstrap.BootstrapAppModelFactory;
 import io.quarkus.bootstrap.BootstrapConstants;
 import io.quarkus.bootstrap.BootstrapException;
-import io.quarkus.bootstrap.app.AugmentAction;
 import io.quarkus.bootstrap.app.CuratedApplication;
 import io.quarkus.bootstrap.app.QuarkusBootstrap;
 import io.quarkus.bootstrap.app.StartupAction;
@@ -51,13 +46,8 @@ public class AppMakerHelper {
     protected static final String TEST_LOCATION = "test-location";
     protected static final String TEST_CLASS = "test-class";
     protected static final String TEST_PROFILE = "test-profile";
+
     /// end copied
-
-    private static Class<?> quarkusTestMethodContextClass;
-    private static boolean hasPerTestResources;
-
-    private static List<Object> testMethodInvokers;
-    private Runnable configCleanup;
 
     public static ApplicationModel getGradleAppModelForIDE(Path projectRoot) throws IOException, AppModelResolverException {
         return System.getProperty(BootstrapConstants.SERIALIZED_TEST_APP_MODEL) == null
@@ -65,16 +55,10 @@ public class AppMakerHelper {
                 : null;
     }
 
-    private QuarkusTestPrepareResult createAugmentor(final Class<?> requiredTestClass, String displayName,
-            boolean isContinuousTesting,
+    static PrepareResult prepare(final Class<?> requiredTestClass,
             CuratedApplication curatedApplication,
-            Class<? extends QuarkusTestProfile> profile,
-            Collection<Runnable> shutdownTasks) throws AppModelResolverException, BootstrapException, IOException,
-            NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
-
-        if (curatedApplication == null) {
-            curatedApplication = makeCuratedApplication(requiredTestClass, displayName, isContinuousTesting, shutdownTasks);
-        }
+            Class<? extends QuarkusTestProfile> profile)
+            throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
 
         Path testClassLocation = getTestClassesLocation(requiredTestClass, curatedApplication);
 
@@ -87,17 +71,28 @@ public class AppMakerHelper {
         // we need to write the Index to make it reusable from other parts of the testing infrastructure that run in different ClassLoaders
         TestClassIndexer.writeIndex(testClassesIndex, testClassLocation, requiredTestClass);
 
-        return getPrepareResult(requiredTestClass, curatedApplication, profile, testClassLocation);
+        Timing.staticInitStarted(curatedApplication
+                .getOrCreateBaseRuntimeClassLoader(),
+                curatedApplication
+                        .getQuarkusBootstrap()
+                        .isAuxiliaryApplication());
+        final Map<String, Object> props = new HashMap<>();
+        props.put(TEST_LOCATION, testClassLocation);
+        props.put(TEST_CLASS, requiredTestClass);
+        if (profile != null) {
+            props.put(TEST_PROFILE, profile.getName());
+        }
+        return new PrepareResult(curatedApplication
+                .createAugmentor(TestBuildChainFunction.class.getName(), props), getQuarkusTestProfile(profile),
+                curatedApplication);
     }
 
-    static QuarkusTestProfile getQuarkusTestProfile(Class<? extends QuarkusTestProfile> profile,
-            Collection<Runnable> shutdownTasks)
+    static QuarkusTestProfile getQuarkusTestProfile(Class<? extends QuarkusTestProfile> profile)
             throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
-        if (profile == null) {
-            return null;
-        }
-        final QuarkusTestProfile profileInstance = new ClassCoercingTestProfile(profile.getConstructor()
-                .newInstance());
+        return profile == null ? null : new ClassCoercingTestProfile(profile.getConstructor().newInstance());
+    }
+
+    static Runnable setExtraProperties(Class<?> profileClass, QuarkusTestProfile profileInstance) {
         final Map<String, String> additional = new HashMap<>();
         // TODO we make this twice, also in abstractjvmextension can we streamline that?
         // TODO We can't get rid of the one here because config needs to be set before augmentation, but maybe we can get rid of it on the test side?
@@ -108,7 +103,7 @@ public class AppMakerHelper {
                     .peek((c) -> {
                         try {
                             // TODO is string comparison more efficient?
-                            if (!c.isAnnotationPresent((Class<? extends Annotation>) profile.getClassLoader()
+                            if (!c.isAnnotationPresent((Class<? extends Annotation>) profileClass.getClassLoader()
                                     .loadClass(Alternative.class.getName()))) {
                                 throw new RuntimeException(
                                         "Enabled alternative " + c + " is not annotated with @Alternative");
@@ -126,43 +121,15 @@ public class AppMakerHelper {
         if (profileInstance.getConfigProfile() != null) {
             additional.put(LaunchMode.TEST.getProfileKey(), profileInstance.getConfigProfile());
         }
-
         //we just use system properties for now
         //it's a lot simpler
         // TODO this is really ugly, set proper config on the app
         // Sadly, I don't think #42715 helps, because it kicks in after this code
-        shutdownTasks.add(RestorableSystemProperties.setProperties(additional)::close);
-        return profileInstance;
-    }
-
-    private QuarkusTestPrepareResult getPrepareResult(Class<?> requiredTestClass, CuratedApplication curatedApplication,
-            Class<? extends QuarkusTestProfile> profile, Path testClassLocation)
-            throws InvocationTargetException, InstantiationException, IllegalAccessException, NoSuchMethodException {
-        QuarkusTestProfile profileInstance = null;
-        if (profile != null) {
-            var shutdownTasks = new ArrayList<Runnable>(1);
-            profileInstance = getQuarkusTestProfile(profile, shutdownTasks);
-            configCleanup = shutdownTasks.get(0);
-        }
-        Timing.staticInitStarted(curatedApplication
-                .getOrCreateBaseRuntimeClassLoader(),
-                curatedApplication
-                        .getQuarkusBootstrap()
-                        .isAuxiliaryApplication());
-        final Map<String, Object> props = new HashMap<>();
-        props.put(TEST_LOCATION, testClassLocation);
-        props.put(TEST_CLASS, requiredTestClass);
-        if (profile != null) {
-            props.put(TEST_PROFILE, profile.getName());
-        }
-        return new QuarkusTestPrepareResult(curatedApplication
-                .createAugmentor(TestBuildChainFunction.class.getName(), props), profileInstance,
-                curatedApplication);
+        return RestorableSystemProperties.setProperties(additional)::close;
     }
 
     public static CuratedApplication makeCuratedApplication(Class<?> requiredTestClass, String displayName,
-            boolean isContinuousTesting,
-            Collection<Runnable> shutdownTasks) throws IOException, AppModelResolverException, BootstrapException {
+            boolean isContinuousTesting) throws IOException, AppModelResolverException, BootstrapException {
         final PathList.Builder rootBuilder = PathList.builder();
         final Consumer<Path> addToBuilderIfConditionMet = path -> {
             if (path != null && !rootBuilder.contains(path) && Files.exists(path)) {
@@ -252,7 +219,6 @@ public class AppMakerHelper {
                 .setApplicationRoot(rootBuilder.build())
                 .build()
                 .bootstrap();
-        shutdownTasks.add(curatedApplication::close);
 
         if (!curatedApplication.getApplicationModel().getDependencies(DependencyFlags.RUNTIME_CP).iterator().hasNext()) {
             throw new RuntimeException(
@@ -266,22 +232,22 @@ public class AppMakerHelper {
     // Note that curated application cannot be re-used between restarts, so this application
     // should have been freshly created
     // TODO maybe don't even accept one? is that comment right?
-    public StartupAction getStartupAction(Class<?> testClass, CuratedApplication curatedApplication,
-            boolean isContinuousTesting, Class profile) throws AppModelResolverException, BootstrapException, IOException,
+    public static StartupAction getStartupAction(Class<?> testClass, CuratedApplication curatedApplication, Class profile)
+            throws AppModelResolverException, BootstrapException, IOException,
             InvocationTargetException, NoSuchMethodException, InstantiationException, IllegalAccessException {
 
-        // TODO these tasks are not handled here but it looks like curatedApplication is never null, so nothing is bootstrapped here anyway
-        Collection<Runnable> shutdownTasks = new HashSet<>();
-        final AugmentAction augmentAction = createAugmentor(testClass, "(QuarkusTest)", isContinuousTesting, curatedApplication,
-                profile,
-                shutdownTasks).augmentAction();
+        PrepareResult prepareResult = prepare(testClass,
+                curatedApplication,
+                profile);
+
+        final Runnable configCleanup = prepareResult.profileInstance() == null ? null
+                : setExtraProperties(profile, prepareResult.profileInstance());
 
         try {
-            StartupAction startupAction = augmentAction.createInitialRuntimeApplication();
 
             // To check changes here run integration-tests/elytron-resteasy-reactive and SharedProfileTestCase in integration-tests/main
 
-            return startupAction;
+            return prepareResult.augmentAction().createInitialRuntimeApplication();
         } catch (Throwable e) {
             // Errors at this point just get reported as org.junit.platform.commons.JUnitException: TestEngine with ID 'junit-jupiter' failed to discover tests
             // Give a little help to debuggers
@@ -294,7 +260,5 @@ public class AppMakerHelper {
                 configCleanup.run();
             }
         }
-
     }
-
 }
